# NVIDIA-Isaac-Sim

./: leap.yaml  leap_integration.py  local_requirements.txt  run_dinov2_optuna_loop.py  tensorleap_requirements.txt
calibration_optuna/: __init__.py  config.py  data_utils.py  experiment_runner.py  metrics.py  optimizer.py  run_optimizer.py  test_optuna.py
local/: generate_data.sh
palletjack_sdg/: palletjack_datagen.sh  requirements.txt  run_experiments.sh  run_experiments_mean_std.sh  sdg_config.yaml  sdg_config_mean_std.yaml  standalone_palletjack_sdg.py  standalone_palletjack_sdg_mean_std.py
palletjack_sdg/experiments/: exp1_overhead_clean.yaml  (+7 more)
rtdetr_2d_warehouse_deployable_efficientvit_l2_v1.0.1/: experiment.yaml
rtdetr_warehouse/: __init__.py  common.py  config.py  data_preprocess.py  encoders.py  losses.py  metadata.py  metrics.py  project_config.yaml  pyproject.toml  synth_metadata.py  utils.py  visualizers.py
simulation_calibration_loop/: README.md  __init__.py  config.py  controller.py  data.py  parameter_schema.py  project_config.yaml  project_config_all.yaml  project_config_camera.yaml  project_config_camera_noise_light.yaml  project_config_environment.yaml  project_config_lighting.yaml  project_config_materials.yaml  project_config_noise.yaml  project_config_objects.yaml  project_config_run2.yaml  run_main_loop.sh  run_main_loop_with_retry.sh  run_small_loop.sh  run_with_loop_venv.sh  setup_loop_venv.sh  smoke_test_dinov2.py  test_isaac_small_loop.py  test_isaac_small_loop.yaml  ui.py
tests/: test_simulation_calibration_loop.py
(+791 files in other folders)
