[tool.poetry]
name = "rtdetr-warehouse"
version = "0.1.0"
description = "Tensorleap integration for RT-DETR v2 on the LOCO warehouse dataset."
authors = ["Tensorleap"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = ">=1.22.2"
pyyaml = ">=5.3.1"
scipy = ">=1.4.1"
torch = "2.1.2"
torchvision = "0.16.2"
onnxruntime = "1.19.2"
opencv-python-headless = ">=4.6.0"

[tool.poetry.group.dev.dependencies]
code-loader = "*"
matplotlib = ">=3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
